hw39-coursework/k8s/01-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-hello-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-hello
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rest-hello
    spec:
      containers:
        - image: nginx:latest
          name: rest-hello
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
