hw39-coursework/k8s/02-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rest-hello
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: rest-hello
  type: ClusterIP
