hw39-coursework/k8s/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homeowners-postgres
  namespace: default
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: homeowners-postgres
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: homeowners-core
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: homeowners-core
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ui
  type: ClusterIP
