hw39-coursework/k8s/04-homeowners-ui.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - image: registry.gitlab.com/shurupov/homeowners/ui:1.0
          name: ui
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-credentials


---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ui
  type: ClusterIP
